# boto3-stubs-pyright-example

./: main.py  pyproject.toml  pyrightconfig.json
