[tool.poetry]
name = "boto3-stubs-pyright-example"
version = "0.1.0"
description = ""
authors = ["Misha Bergal <misha.bergal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.19.12"
boto3-stubs = {extras = ["essential"], version = "^1.19.12"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
